# lbm

./: .gitignore  AUTHORS.md  CMakeLists.txt  Doxyfile  README.md  codecov.yml
.circleci/: config.yml
clang-tools/: format.sh
include/: lattice.h  settings.h
src/: lattice.cc  main.cc
tests/: .clang-format  lattice_test.cc  test_main.cc
